1998-04-11  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-x20.el (encode-mime-charset-region): Use 'defun instead of
	'defsubst.
	(decode-mime-charset-region): Use 'defun instead of 'defsubst.

1998-04-10  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL-ELS (apel-modules): Delete 'std11 and 'std11-parse.

	* std11.el, std11-parse.el: Abolish std11-parse.el and std11.el
	(moved to RIME).

1998-04-09  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-e19.el, emu-e20.el: Use 'make-obsolete for 'string-columns.

	* emu-e19.el, emu-nemacs.el, emu-x20.el: Abolish obsolete alias
	`char-leading-char'.

1998-04-09  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-e20.el, emu-mule.el, emu-nemacs.el, emu-e19.el: Abolish
	obsolete alias `char-columns'.

	* emu-e19.el: Abolish constant `charset-ascii' and
	`charset-iso8859-1'.
	(charset-description): New implementation.
	(charset-registry): New implementation.
	(charset-width): Renamed from `charset-columns'; new
	implementation.
	(find-charset-string): New implementation.
	(find-charset-region): New implementation.
	(charsets-mime-charset-alist): New initial value.
	(detect-mime-charset-region): New implementation.
	(char-charset): New implementation.

	* emu-nemacs.el: Rename `charset-columns' -> `charset-width'.

	* emu-nemacs.el: Abolish constant `charset-ascii' and
	`charset-jisx0208'.
	Abolish constant `lc-ascii' and `lc-jp'.
	(charset-description): New implementation.
	(charset-registry): New implementation.
	(charset-columns): New implementation.
	(find-charset-string): New implementation.
	(find-charset-region): New implementation.
	(charsets-mime-charset-alist): New initial value.
	(char-charset): New implementation.

1998-04-09  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-e20.el, emu-x20.el, emu-e19.el, emu-mule.el, emu-nemacs.el
	(char-next-index): New macro.

1998-03-26  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* std11.el: Require 'std11-parse when compile.

1998-03-25  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
