@@ -39,10 +39,6 @@ What's APEL?
 
 	mule-caesar.el: ROT 13-47-48 Caesar rotation utility
 
-	std11: RFC 822/STD 11 parser and utility
-	    std11.el       --- main module
-	    std11-parse.el --- parser
-
 
 Installation
 ============
@@ -238,10 +234,7 @@ Bug reports
 
   Via the tm ML, you can report APEL bugs, obtain the latest release
   of APEL, and discuss future enhancements to APEL.  To join the tm
-  ML, send e-mail to
+  ML, send an empty e-mail to
 
-	tm-ja-admin@chamonix.jaist.ac.jp	(Japanese)
-	tm-en-admin@chamonix.jaist.ac.jp	(English)
-
-  Since the user registration is done manually, please write the mail
-  body in human-recognizable language (^_^).
+	tm-en-help@chamonix.jaist.ac.jp	(English)
+	tm-ja-help@chamonix.jaist.ac.jp	(Japanese)
